src/gen/testParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/tuna/Documents/Onlab/Test/src/test/test.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class testParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		CHARACTER=1, HEALTH=2, EFFECTEVERYTURN=3, WITHCHANCE=4, OR=5, ACTIONS=6, 
		EFFECT=7, EFFECTS=8, APPLY=9, DAMAGE=10, INSTANTLY=11, FOR=12, TURNS=13, 
		TO=14, ENEMIES=15, PLAYER=16, OUTGOING=17, INCOMING=18, IS=19, SET=20, 
		TARGET=21, DEAL=22, CARD=23, RARITY=24, VALIDTARGETS=25, SELF=26, DESCRIPTION=27, 
		GAME=28, STAGES=29, LENGTH=30, MAXWIDTH=31, MINWIDTH=32, FILLWITH=33, 
		MUSTCONTAIN=34, ENDSWITH=35, NODE=36, NODEENEMIES=37, STAGE=38, REWARDS=39, 
		NAME=40, PLAYERSELECT=41, X=42, MUL=43, DIV=44, PLUS=45, MINUS=46, CARET=47, 
		CLN=48, LBRACKET=49, RBRACKET=50, LCURLY=51, RCURLY=52, LPAREN=53, RPAREN=54, 
		COMMA=55, PERCENT=56, STRING=57, INT=58, DOUBLE=59, ID=60, WS=61, EOS=62, 
		COMMENT=63;
	public const int
		RULE_program = 0, RULE_varName = 1, RULE_gameSetup = 2, RULE_gameProperties = 3, 
		RULE_stageDefinition = 4, RULE_stageProperties = 5, RULE_lengthDef = 6, 
		RULE_minWidthDef = 7, RULE_maxWidthDef = 8, RULE_fillWithDef = 9, RULE_mustContainDef = 10, 
		RULE_endsWithDef = 11, RULE_nodeDefinition = 12, RULE_nodeProperties = 13, 
		RULE_charSetup = 14, RULE_charProperties = 15, RULE_effectDefinition = 16, 
		RULE_passiveEffect = 17, RULE_activeEffect = 18, RULE_expression = 19, 
		RULE_primary = 20, RULE_parenthesizedExpression = 21, RULE_literalExpression = 22, 
		RULE_varRef = 23, RULE_rarityName = 24, RULE_doubleLiteral = 25, RULE_cardDefinition = 26, 
		RULE_list = 27, RULE_listItem = 28;
	public static readonly string[] ruleNames = {
		"program", "varName", "gameSetup", "gameProperties", "stageDefinition", 
		"stageProperties", "lengthDef", "minWidthDef", "maxWidthDef", "fillWithDef", 
		"mustContainDef", "endsWithDef", "nodeDefinition", "nodeProperties", "charSetup", 
		"charProperties", "effectDefinition", "passiveEffect", "activeEffect", 
		"expression", "primary", "parenthesizedExpression", "literalExpression", 
		"varRef", "rarityName", "doubleLiteral", "cardDefinition", "list", "listItem"
	};

	private static readonly string[] _LiteralNames = {
		null, "'Character'", "'Health'", "'EffectEveryTurn'", "'with chance'", 
		"'or'", "'Actions'", "'Effect'", "'effects'", "'Apply'", "'damage'", "'instantly'", 
		"'for'", "'turns'", "'to'", "'enemies'", "'player'", "'Outgoing'", "'Incoming'", 
		"'is'", "'set'", "'target'", "'Deal'", "'Card'", "'Rarity'", "'ValidTargets'", 
		"'self'", "'Desc'", "'Game'", "'Stages'", "'Length'", "'Max-width'", "'Min-width'", 
		"'FillWith'", "'MustContain'", "'EndsWith'", "'Node'", "'Enemies'", "'Stage'", 
		"'Rewards'", "'Name'", "'Player'", "'x'", "'*'", "'/'", "'+'", "'-'", 
		"'^'", "':'", "'['", "']'", "'{'", "'}'", "'('", "')'", "','", "'%'", 
		null, null, null, null, null, "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "CHARACTER", "HEALTH", "EFFECTEVERYTURN", "WITHCHANCE", "OR", "ACTIONS", 
		"EFFECT", "EFFECTS", "APPLY", "DAMAGE", "INSTANTLY", "FOR", "TURNS", "TO", 
		"ENEMIES", "PLAYER", "OUTGOING", "INCOMING", "IS", "SET", "TARGET", "DEAL", 
		"CARD", "RARITY", "VALIDTARGETS", "SELF", "DESCRIPTION", "GAME", "STAGES", 
		"LENGTH", "MAXWIDTH", "MINWIDTH", "FILLWITH", "MUSTCONTAIN", "ENDSWITH", 
		"NODE", "NODEENEMIES", "STAGE", "REWARDS", "NAME", "PLAYERSELECT", "X", 
		"MUL", "DIV", "PLUS", "MINUS", "CARET", "CLN", "LBRACKET", "RBRACKET", 
		"LCURLY", "RCURLY", "LPAREN", "RPAREN", "COMMA", "PERCENT", "STRING", 
		"INT", "DOUBLE", "ID", "WS", "EOS", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "test.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static testParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public testParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public testParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GameSetupContext[] gameSetup() {
			return GetRuleContexts<GameSetupContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GameSetupContext gameSetup(int i) {
			return GetRuleContext<GameSetupContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StageDefinitionContext[] stageDefinition() {
			return GetRuleContexts<StageDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StageDefinitionContext stageDefinition(int i) {
			return GetRuleContext<StageDefinitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NodeDefinitionContext[] nodeDefinition() {
			return GetRuleContexts<NodeDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NodeDefinitionContext nodeDefinition(int i) {
			return GetRuleContext<NodeDefinitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CharSetupContext[] charSetup() {
			return GetRuleContexts<CharSetupContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CharSetupContext charSetup(int i) {
			return GetRuleContext<CharSetupContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectDefinitionContext[] effectDefinition() {
			return GetRuleContexts<EffectDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectDefinitionContext effectDefinition(int i) {
			return GetRuleContext<EffectDefinitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CardDefinitionContext[] cardDefinition() {
			return GetRuleContexts<CardDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CardDefinitionContext cardDefinition(int i) {
			return GetRuleContext<CardDefinitionContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItestVisitor<TResult> typedVisitor = visitor as ItestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 64;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 58;
					gameSetup();
					}
					break;
				case 2:
					{
					State = 59;
					stageDefinition();
					}
					break;
				case 3:
					{
					State = 60;
					nodeDefinition();
					}
					break;
				case 4:
					{
					State = 61;
					charSetup();
					}
					break;
				case 5:
					{
					State = 62;
					effectDefinition();
					}
					break;
				case 6:
					{
					State = 63;
					cardDefinition();
					}
					break;
				}
				}
				State = 66;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 343920738818L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(testParser.ID, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterVarName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitVarName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItestVisitor<TResult> typedVisitor = visitor as ItestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarNameContext varName() {
		VarNameContext _localctx = new VarNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_varName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GameSetupContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GAME() { return GetToken(testParser.GAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(testParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GamePropertiesContext gameProperties() {
			return GetRuleContext<GamePropertiesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(testParser.RCURLY, 0); }
		public GameSetupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameSetup; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterGameSetup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitGameSetup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItestVisitor<TResult> typedVisitor = visitor as ItestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameSetup(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GameSetupContext gameSetup() {
		GameSetupContext _localctx = new GameSetupContext(Context, State);
		EnterRule(_localctx, 4, RULE_gameSetup);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			Match(GAME);
			State = 71;
			Match(LCURLY);
			State = 72;
			gameProperties();
			State = 73;
			Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GamePropertiesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PLAYERSELECT() { return GetTokens(testParser.PLAYERSELECT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLAYERSELECT(int i) {
			return GetToken(testParser.PLAYERSELECT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] CLN() { return GetTokens(testParser.CLN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLN(int i) {
			return GetToken(testParser.CLN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarNameContext[] varName() {
			return GetRuleContexts<VarNameContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VarNameContext varName(int i) {
			return GetRuleContext<VarNameContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] EOS() { return GetTokens(testParser.EOS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOS(int i) {
			return GetToken(testParser.EOS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STAGES() { return GetTokens(testParser.STAGES); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STAGES(int i) {
			return GetToken(testParser.STAGES, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext[] list() {
			return GetRuleContexts<ListContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list(int i) {
			return GetRuleContext<ListContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NAME() { return GetTokens(testParser.NAME); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME(int i) {
			return GetToken(testParser.NAME, i);
		}
		public GamePropertiesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameProperties; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterGameProperties(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitGameProperties(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItestVisitor<TResult> typedVisitor = visitor as ItestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGameProperties(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GamePropertiesContext gameProperties() {
		GamePropertiesContext _localctx = new GamePropertiesContext(Context, State);
		EnterRule(_localctx, 6, RULE_gameProperties);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 90;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case PLAYERSELECT:
					{
					State = 75;
					Match(PLAYERSELECT);
					State = 76;
					Match(CLN);
					State = 77;
					varName();
					State = 78;
					Match(EOS);
					}
					break;
				case STAGES:
					{
					State = 80;
					Match(STAGES);
					State = 81;
					Match(CLN);
					State = 82;
					list();
					State = 83;
					Match(EOS);
					}
					break;
				case NAME:
					{
					State = 85;
					Match(NAME);
					State = 86;
					Match(CLN);
					State = 87;
					varName();
					State = 88;
					Match(EOS);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 3299071754240L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StageDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STAGE() { return GetToken(testParser.STAGE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VarNameContext varName() {
			return GetRuleContext<VarNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(testParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StagePropertiesContext stageProperties() {
			return GetRuleContext<StagePropertiesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(testParser.RCURLY, 0); }
		public StageDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stageDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterStageDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitStageDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItestVisitor<TResult> typedVisitor = visitor as ItestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStageDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StageDefinitionContext stageDefinition() {
		StageDefinitionContext _localctx = new StageDefinitionContext(Context, State);
		EnterRule(_localctx, 8, RULE_stageDefinition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			Match(STAGE);
			State = 95;
			varName();
			State = 96;
			Match(LCURLY);
			State = 97;
			stageProperties();
			State = 98;
			Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StagePropertiesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LengthDefContext[] lengthDef() {
			return GetRuleContexts<LengthDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LengthDefContext lengthDef(int i) {
			return GetRuleContext<LengthDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MaxWidthDefContext[] maxWidthDef() {
			return GetRuleContexts<MaxWidthDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MaxWidthDefContext maxWidthDef(int i) {
			return GetRuleContext<MaxWidthDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MinWidthDefContext[] minWidthDef() {
			return GetRuleContexts<MinWidthDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MinWidthDefContext minWidthDef(int i) {
			return GetRuleContext<MinWidthDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FillWithDefContext[] fillWithDef() {
			return GetRuleContexts<FillWithDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FillWithDefContext fillWithDef(int i) {
			return GetRuleContext<FillWithDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MustContainDefContext[] mustContainDef() {
			return GetRuleContexts<MustContainDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MustContainDefContext mustContainDef(int i) {
			return GetRuleContext<MustContainDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndsWithDefContext[] endsWithDef() {
			return GetRuleContexts<EndsWithDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndsWithDefContext endsWithDef(int i) {
			return GetRuleContext<EndsWithDefContext>(i);
		}
		public StagePropertiesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stageProperties; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterStageProperties(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitStageProperties(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItestVisitor<TResult> typedVisitor = visitor as ItestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStageProperties(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StagePropertiesContext stageProperties() {
		StagePropertiesContext _localctx = new StagePropertiesContext(Context, State);
		EnterRule(_localctx, 10, RULE_stageProperties);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 106;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LENGTH:
					{
					State = 100;
					lengthDef();
					}
					break;
				case MAXWIDTH:
					{
					State = 101;
					maxWidthDef();
					}
					break;
				case MINWIDTH:
					{
					State = 102;
					minWidthDef();
					}
					break;
				case FILLWITH:
					{
					State = 103;
					fillWithDef();
					}
					break;
				case MUSTCONTAIN:
					{
					State = 104;
					mustContainDef();
					}
					break;
				case ENDSWITH:
					{
					State = 105;
					endsWithDef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 67645734912L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LengthDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LENGTH() { return GetToken(testParser.LENGTH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLN() { return GetToken(testParser.CLN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(testParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EOS() { return GetToken(testParser.EOS, 0); }
		public LengthDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lengthDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.EnterLengthDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestListener typedListener = listener as ItestListener;
			if (typedListener != null) typedListener.ExitLengthDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItestVisitor<TResult> typedVisitor = visitor as ItestVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLengthDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LengthDefContext lengthDef() {
		LengthDefContext _localctx = new LengthDefContext(Context, State);
		EnterRule(_localctx, 12, RULE_lengthDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(LENGTH);
			State = 111;
			Match(CLN);
			State = 112;
			Match(INT);
			State = 113;
			Match(EOS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
